--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-maps": "^1.26.20",
+    "react-native-maps": "1.20.1",
     "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.20.0",
+    "react-native-screens": "~4.16.0",
     "socket.io-client": "^4.8.3"
   },
   "devDependencies": {
