--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^7.10.1",
     "axios": "^1.13.2",
     "expo": "~54.0.32",
+    "expo-image-picker": "~17.0.10",
     "expo-location": "^19.0.8",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
