--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "divocabb",
-    "slug": "divocabb",
+    "name": "twende",
+    "slug": "twende",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
